[package]
name = "artr-codec"
version = "0.1.0"
description = "ARTR encoder / decoder"
repository = "https://github.com/dacci/artr-codec"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
thiserror = "1.0.49"
wasm-bindgen = "0.2.87"

[profile.release]
codegen-units = 1
lto = true
strip = true
